# guru

./: .env  .gitignore  concepts.json  memory.md  ml-guru.db  pyproject.toml
api/: api.py  bootstrap.py  config.py
api/models/: __init__.py  models.py  session.py
api/prompt_builders/: __init__.py  chat.py  tester.py  tutor.py
api/routes/: auth_routes.py  chat_routes.py  conversation_routes.py  course_routes.py  guru_routes.py  ollama_routes.py  session_routes.py  syllabus_routes.py  tutor_routes.py  user_routes.py
api/schemas/: __init__.py  auth_schemas.py  chat_schemas.py  course_schemas.py  guru_schemas.py  syllabus_run_schemas.py  syllabus_schemas.py  user_progress_schemas.py  user_schemas.py
api/services/: agent_stream_service.py  chat_service.py  session_service.py  syllabus_module_generator.py  syllabus_pipeline.py  syllabus_service.py  tutor_service.py
api/utils/: auth.py  common.py  history_manager.py  history_store.py  jwt.py  logger.py  prompt_builder.py  token_budget.py
api/ws/: __init__.py  syllabus_broadcast.py
docs/: 150_TOKEN_CONSTRAINT.md  PERFORMANCE_DIAGNOSIS.md  PIPELINE_OPTIMIZATION.md  PIPELINE_REDESIGN.md  PROFESSIONAL_ARCHITECTURE.md
frontend/ml-guru-web/: index.html  package-lock.json  package.json
frontend/ml-guru-web/src/: App.tsx
infra/llm/: ollama.py
infra/vector/: __init__.py  chroma_store.py  store.py
migrations/: add_chat_conversation_to_sessions.py  add_interaction_metadata.py  add_module_progression.py  add_sessions_table.py  add_syllabus_run_state_snapshot.py  rename_session_metadata.py
scripts/: inspect_concepts.py
src/Guru.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/agents/chat_agent/: agent.py  api.py  auth_utils.py  graph.py  history_store.py  main.py  memory.py  ml-guru.db  models.py  prompts.py  vector_memory.py
src/agents/core/: agent_state.py  base_agent.py  llm.py  memory.py  no_memory.py  prompt_builder.py  registry.py  simple_memory.py  stream_api.py  token_utils.py  tool.py
src/agents/rag_agent/: __init__.py  agent.py  chunking.py  dbconfig.py  main.py  service.py  store.py  text_extractor.py  types.py
tests/: README_inference_test.md  README_planner_test.md  conftest.py  run_planner_test.py  test_ollama_inference_speed.py  test_planner_agent.py  test_sequential_syllabus_integration.py  test_syllabus_integration.py  test_syllabus_quick.py
tests/integration/: __init__.py  conftest.py  test_api_routes.py  test_ollama_structured_output.py  test_syllabus_full_run.py  test_syllabus_stage1.py
tests/unit/: __init__.py  conftest.py  test_common.py  test_ollama_llm.py  test_prompt_builder.py  test_token_budget.py
(+104 files in other folders)
