[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Guru"
version = "0.1.0"
description = "Multiple agents"
requires-python = ">=3.10"
dependencies = [
    "langgraph",
    "fastapi",
    "pydantic",
    "uvicorn",
    "sqlalchemy",
    "python-jose",
    "bcrypt",
    "pydantic_settings",
    "chromadb",
    # Text extraction for ingestion (optional at runtime depending on file types)
    "pypdf",
    "python-docx",
    "python-pptx",
    "striprtf",
    "beautifulsoup4",
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools]
package-dir = {"" = "src"} 

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"